--- a/config.org
+++ b/config.org
@@ -7,13 +7,6 @@
 This is my Emacs configuration file. It's built using org-mode. GitHub can render org files and I've
 included a symlink README.org -> config.org so GitHub renders my config directly on the repository page.
 
-
-* Personal information
-#+BEGIN_SRC emacs-lisp
-(setq user-full-name "Xiuyu Li")
-(setq user-mail-address "nickleefly@gmail.com")
-#+END_SRC
-
 * Package management
 #+BEGIN_SRC emacs-lisp
 (load "package")
@@ -111,7 +104,7 @@ included a symlink README.org -> config.org so GitHub renders my config directly
 #+END_SRC
 
 *** Disable "Text is read-only" warning
-I find it annoying because it makes it hard to find the cursor after it appears. 
+I find it annoying because it makes it hard to find the cursor after it appears.
 Solution found [[https://emacs.stackexchange.com/questions/19742/is-there-a-way-to-disable-the-buffer-is-read-only-warning][on this StackOverflow question]].
 #+BEGIN_SRC emacs-lisp
 (defun my-command-error-function (data context caller)
@@ -695,6 +688,9 @@ Make sure =eslint= does not try to =--print-config= after each buffer opens. Her
         ;; If nil, the fzf buffer will appear at the top of the window
         fzf/position-bottom t
         fzf/window-height 15))
+  (global-set-key (kbd "C-c f") 'fzf)
+  (global-set-key (kbd "C-c g") 'fzf-git)
+  (global-set-key (kbd "C-c d") 'fzf-directory)
 #+END_SRC
 
 *Completion
