--- a/config.org
+++ b/config.org
@@ -251,6 +251,17 @@ Sorry Richard
 (evil-commentary-mode)))
 #+END_SRC
 
+*** undo
+#+BEGIN_SRC emacs-lisp
+(use-package undo-tree
+  :ensure t
+  :after evil
+  :diminish
+  :config
+  (evil-set-undo-system 'undo-tree)
+  (global-undo-tree-mode 1))
+#+END_SRC
+
 *** Cursor changer
 #+BEGIN_SRC emacs-lisp
 (use-package evil-terminal-cursor-changer
